@@ -332,21 +332,7 @@ class Admin_Controller_Admin extends Zikula_AbstractController
                     }
                     $menutexttitle = $modinfo['description'];
 
-                    $osmoddir = DataUtil::formatForOS($modinfo['directory']);
-                    $adminicons = array($modpath . '/' . $osmoddir . '/images/admin.png',
-                            $modpath . '/' . $osmoddir . '/images/admin.jpg',
-                            $modpath . '/' . $osmoddir . '/images/admin.gif',
-                            $modpath . '/' . $osmoddir . '/pnimages/admin.gif',
-                            $modpath . '/' . $osmoddir . '/pnimages/admin.jpg',
-                            $modpath . '/' . $osmoddir . '/pnimages/admin.jpeg',
-                            $modpath . '/' . $osmoddir . '/pnimages/admin.png',
-                            'system/Admin/images/default.gif');
-
-                    foreach ($adminicons as $adminicon) {
-                        if (is_readable($adminicon)) {
-                            break;
-                        }
-                    }
+                    $adminicon = ModUtil::getModuleImagePath($adminmodule['name']);
 
                     $adminlinks[] = array('menutexturl' => $menutexturl,
                             'menutext' => $menutext,
