@@ -1,7 +1,8 @@
 {admincategorymenu}
 <div class="z-admin-content z-clearfix">
     <div class="z-admin-content-modtitle">
-        {img modname=$toplevelmodule src='admin.png' height='36'}
-        <h2>{modgetinfo modname=$toplevelmodule info='displayname'}</h2>
+    	{modgetinfo modname=$toplevelmodule info='displayname' assign='displayName'}
+        <img src="{modgetimage|safetext}" alt="{$displayName|safetext}" />  
+        <h2>{$displayName}</h2>
     </div>
     {modulelinks modname=$toplevelmodule type='admin'}
