@@ -22,6 +22,7 @@ Features:
 - Added thumbnail management features to Imagine plugin
 - Refactor Mailer module to use Zikula Form
 - Zikula Form - automatically set proper form enctype when upload input is used
+- Added ModUtil::getModuleImagePath() for getting the admin image of a module
 
 CHANGELOG - ZIKULA 1.3.4
 ------------------------
